Got dev environment configured

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,18 @@ services:
       - "8000:8000"
     depends_on:
       - db
+    environment:
+      - DEBUG=True
+      - SECRET_KEY="supersecretkey"
   webtest:
     image: keepscore_backendbase
     command: python manage.py test
     volumes_from:
       - backendbase
-      
+  dbmigrate:
+    image: keepscore_backendbase
+    command: bash -c "python manage.py makemigrations && python manage.py migrate"
+    volumes_from:
+      - backendbase
+    depends_on:
+      - db
