--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,6 +2,6 @@ FROM python:3.5
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /code
 WORKDIR /code
-ADD requirements.txt /code/
-RUN pip install -r requirements.txt
 ADD . /code/
+RUN pip install -r requirements.txt
+RUN python manage.py collectstatic --noinput
