--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
-sudo: required
-
-services:
-  - docker
-
-before_install:
+install:
+  - sudo apt-get install -y linux-image-virtual kernel linux-image-extra-virtual
+  - curl -sSL https://get.docker.com/ | sudo sh
   - sudo pip install docker-compose
 
 script:
