--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 sudo: required
 
-install:
-  - curl -sSL https://get.docker.com/ | sudo sh
-  - sudo pip install docker-compose
+services:
+  - docker
+
+before_install:
+  - docker build -t keepscore .
 
 script:
-  - docker-compose up webtest
+  - docker run keepscore python manage.py test
