--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ services:
   - docker
 
 before_install:
-  - docker build -t keepscore .
+  - sudo pip install docker-compose
+  - docker-compose up -d db
 
 script:
-  - docker run keepscore python manage.py test
+  - docker-compose up webtest
