--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ services:
   - docker
 
 before_install:
+  - sudo apt-get install -y docker-engine
+  - sudo service docker restart
   - sudo pip install docker-compose
   - docker-compose up -d db
 
