--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - sudo apt-get install -y docker-engine
+  - sudo apt-get -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" install -y docker-engine
   - sudo service docker restart
   - sudo pip install docker-compose
   - docker-compose up -d db
